Adiciona Estrutura para Paginar os registros